k8s/wp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels:
    app: wordpress
spec:
  type: ClusterIP 
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
