k8s/wp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    app: wordpress
spec:
  rules:
    - host: wpk8s.test
      paths: 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress-svc
              port:
                number: 80
